--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,23 +2,22 @@
 environment:
   matrix:
   # node.js
-  - nodejs_version: "6"
+  -nodejs_version: "6"
 
-# Install scripts. (Runs after repo cloning)
-install:
-  # Get the latest stable version of Node.js or io.js
-  - ps: Install-Product node $env:nodejs_version
-  # install modules
-  - npm install
+  #Install scripts. (Runs after repo cloning)
+  Install:
+    #Get the latest stable version of Node.js or io.js
+    - ps: Install-Product node $env:nodejs_version
+    #install modules
+    - npm install
 
-  # Post-install test scripts.
-  test_script:
-    #Output useful info for debugging
-    - node --version
-    - npm --version
-    # run tests
-    - npm test
+    # Post-install test scripts.
+    test_script:
+      #Output useful info for debugging.
+      - node --version
+      - npm --version
+      # run tests
+      - npm test
 
-  # Dont actually build
+  # Don't actually build.
   build: off
-
