--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,23 @@
+# Test against this version of Node.js
 environment:
   matrix:
-  -nodejs_version: "6"
+  # node.js
+  - nodejs_version: "6"
 
-Install:
-- ps: Install-Product node $env:nodejs_version
-- npm install
+# Install scripts. (runs after repo cloning)
+install:
+  # Get the latest stable version of Node.js or io.js
+  - ps: Install-Product node $env:nodejs_version
+  # install modules
+  - npm install
 
+# Post-install test scripts.
 test_script:
-- node --version
-- npm --version
-- npm test
+  # Output useful info for debugging.
+  - node --version
+  - npm --version
+  # run tests
+  - npm test
 
+# Don't actually build.
 build: off
